estilização inicial da pagina

--- a/index.html
+++ b/index.html
@@ -5,126 +5,128 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/style.css">
     <title>Index</title>
 </head>
 
 <body>
     <header>
-        <h1>Tarefas a fazer</h1>
-        <h3>Adicione e complete tarefas para organizar melhor sua semana. :)</h3>
+        <div class="header_index">
+            <div class="header_title">
+                <h1>Tarefas a fazer</h1>
+            </div>
+            <div class="header_text">
+                <p>Adicione e complete tarefas para organizar melhor sua semana. :)</p>
+            </div>
+        </div>
     </header>
 
-    <div>
-        <input placeholder="Busque tarefas" />
-        <button>Buscar</button>
+    <div class="container_tasks">
+        <div class="container_seach">
+            <input class="container_input" placeholder="Busque tarefas" />
+            <button class="container_button">Buscar</button>
+        </div>
 
-        <label>Organizar por:</label>
-        <select>
-            <option>Prazo</option>
-            <option>Prioridade</option>
-        </select>
+        <div class="container_deadline">
+            <label class="container_label">Organizar por:</label>
+            <select class="container_select">
+                <option>Prazo</option>
+                <option>Prioridade</option>
+            </select>
+        </div>
     </div>
 
-    <div>
+    <div class="container_card">
+
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
+
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
-            <img />
-            <ul>
-                <li>Nome da tarefa</li>
-                <li>Descrição</li>
-                <li>Prazo</li>
-                <li>Data da inclusão</li>
-                <button>Concluir</button>
-                <button>Alterar Prazo</button>
-            </ul>
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p>Nome da tarefa</p>
+            <p>Descrição</p>
+            <p>Prazo</p>
+            <p>Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
-        <button>Ver mais</button>
     </div>
 
+    <button class="card_button">Ver mais</button>
+    
     <section class="dicas">
         <p>
             Quer receber dicas para organizar melhor sua rotina? Cadastre-se! deles?
