estilização da pagina, continuação

--- a/index.html
+++ b/index.html
@@ -125,34 +125,36 @@
 
     </div>
 
-    <button class="card_button">Ver mais</button>
-    
+    <button class="card_button">Ver mais +</button>
+
     <section class="dicas">
-        <p>
+        <p class="dicas_paragrafo">
             Quer receber dicas para organizar melhor sua rotina? Cadastre-se! deles?
             Preencha agora!
         </p>
-        <form>
-            <label>Nome</label>
-            <input type="text" required name="nome" placeholder="Digite seu nome" />
+        <form class="form_dicas">
+            <label class="form_label">nome</label>
+            <input class="form_input" type="text" required name="nome" placeholder="Digite seu nome" />
 
-            <label for="email">E-mail:</label>
-            <input type="email" required name="email" placeholder="Digite seu e-mail" />
+            <label class="form_label" for="email">e-mail:</label>
+            <input class="form_input" type="email" required name="email" placeholder="Digite seu e-mail" />
 
-            <button type="submit">Cadastrar</button>
+            <button class="button_dicas" type="submit">Cadastrar</button>
         </form>
     </section>
 
     <div class="sobre">
-        <img />
-        <p>
+        <img class="sobre_imagem" src="./assets/image/logo_linx.JPG" alt="Logo da Linx" />
+        <p class="sobre_text">
             A Linx é uma empresa brasileira especialista em tecnologia para o
             varejo. Líder no mercado de software de gestão, com 45,6% de market
-            share do mercado varejista, conforme atesta o IDC. Toda a expertise da
-            Linx na jornada de compra é transformada em insights fundamentais para
+            share do mercado varejista, conforme atesta o IDC.
+        <p>
+            Toda a expertise da Linx na jornada de compra é transformada em insights fundamentais para
             atingir o que os varejistas mais esperam: fidelizar seus consumidores e
-            atingir resultados concretos e relevantes. Com capital aberto na B3
-            desde 2013, a Linx também se tornou a primeira empresa brasileira de
+            atingir resultados concretos e relevantes.
+        <p>
+            Com capital aberto na B3 desde 2013, a Linx também se tornou a primeira empresa brasileira de
             software com capital aberto na NYSE, em 2019. A empresa possui mais de
             3,5 mil colaboradores distribuídos entre sua sede em São Paulo, 15
             filiais pelo Brasil e 5 países da América. Para saber mais, acesse
