ajustes em bordas e pequenas correções no css

--- a/index.html
+++ b/index.html
@@ -44,132 +44,151 @@
 
         <div class="card">
             <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo"><i class="fas fa-clock"></i> Alterar Prazo</button>
+           
+        </div>
+
+        <div class="card">
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo"><i class="fas fa-calendar-alt"></i> Alterar Prazo</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
+            <button class="card_button_concluir">Concluir</button>
+            <button class="card_button_prazo"><i class="far fa-calendar-alt"></i> Alterar Prazo</button>
+        </div>
+
+        <div class="card">
+            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
             <button class="card_button_concluir">Concluir</button>
             <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
             <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
             <button class="card_button_concluir">Concluir</button>
             <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
             <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
             <button class="card_button_concluir">Concluir</button>
             <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
             <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
-            <button class="card_button_concluir">Concluir</button>
-            <button class="card_button_prazo">Alterar Prazo</button>
-
-        </div>
-
-        <div class="card">
-            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
             <button class="card_button_concluir">Concluir</button>
             <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
         <div class="card">
             <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
+            <p class="card_tarefa">Nome da tarefa</p>
+            <p class="card_descricao">Descrição</p>
+            <p class="card_prazo">Prazo</p>
+            <p class="card_inclusao">Data da inclusão</p>
             <button class="card_button_concluir">Concluir</button>
             <button class="card_button_prazo">Alterar Prazo</button>
         </div>
 
-        <div class="card">
-            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
-            <button class="card_button_concluir">Concluir</button>
-            <button class="card_button_prazo">Alterar Prazo</button>
-        </div>
-
-        <div class="card">
-            <img src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
-            <p>Nome da tarefa</p>
-            <p>Descrição</p>
-            <p>Prazo</p>
-            <p>Data da inclusão</p>
-            <button class="card_button_concluir">Concluir</button>
-            <button class="card_button_prazo">Alterar Prazo</button>
-        </div>
-
+        <button class="card_button">Ver mais +</button>
     </div>
 
-    <button class="card_button">Ver mais +</button>
-
     <section class="dicas">
-        <p class="dicas_paragrafo">
+        <div class="dicas_paragrafo">
             Quer receber dicas para organizar melhor sua rotina? Cadastre-se! deles?
             Preencha agora!
-        </p>
+        </div>
+
         <form class="form_dicas">
-            <label class="form_label">nome</label>
-            <input class="form_input" type="text" required name="nome" placeholder="Digite seu nome" />
 
-            <label class="form_label" for="email">e-mail:</label>
-            <input class="form_input" type="email" required name="email" placeholder="Digite seu e-mail" />
+            <div class="test_mudar">
+                <div class="dicas_nome">
+                    <label class="form_label">nome</label>
+                    <input class="form_input" type="text" required name="nome" placeholder="Digite seu nome" />
+                </div>
 
-            <button class="button_dicas" type="submit">Cadastrar</button>
+                <div class="dicas_email">
+                    <label class="form_label" for="email">e-mail:</label>
+                    <input class="form_input" type="email" required name="email" placeholder="Digite seu e-mail" />
+                </div>
+
+                <div class="button_form">
+                <button class="button_dicas" type="submit">Cadastrar</button>
+                </div>
+            </div>
         </form>
     </section>
 
+    
     <div class="sobre">
         <img class="sobre_imagem" src="./assets/image/logo_linx.JPG" alt="Logo da Linx" />
-        <p class="sobre_text">
+
+        <div class="sobre_text">
+        <p>
             A Linx é uma empresa brasileira especialista em tecnologia para o
             varejo. Líder no mercado de software de gestão, com 45,6% de market
             share do mercado varejista, conforme atesta o IDC.
-        <p>
+
+            <p>
             Toda a expertise da Linx na jornada de compra é transformada em insights fundamentais para
             atingir o que os varejistas mais esperam: fidelizar seus consumidores e
             atingir resultados concretos e relevantes.
-        <p>
+            <p>
             Com capital aberto na B3 desde 2013, a Linx também se tornou a primeira empresa brasileira de
             software com capital aberto na NYSE, em 2019. A empresa possui mais de
             3,5 mil colaboradores distribuídos entre sua sede em São Paulo, 15
             filiais pelo Brasil e 5 países da América. Para saber mais, acesse
             linx.com.br/imprensa.
-        </p>
+            </div>
     </div>
 
     <footer>
-        <div>
-            <p>Testando suas habilidades em HTML e CSS.</p>
-            <p>Linx Impulse 2021</p>
-            <p>Teste ficcional</p>
-            <p>Por André Eigenheer</p>
+        <div class="footer_index">
+            <div class="footer_text">
+                <div>
+                    <p>Testando suas habilidades em HTML e CSS.</p>
+                    <p>Linx Impulse 2021</p>
+                    <p>Teste ficcional</p>
+                    <p>Por André Eigenheer</p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
+
+<script src="https://kit.fontawesome.com/b303293aac.js" crossorigin="anonymous"></script>
 
 </html>
