inclusão botão adicionar

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 <option>Selecione</option>
                 <option>Prazo</option>
                 <option>Prioridade</option>
-               
             </select>
+
+            <button class="container_button_tarefa"> Adicionar</button>
+
         </div>
     </div>
 
@@ -51,7 +53,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="5"></textarea>
 
             <div>
@@ -77,7 +79,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -102,7 +104,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -126,7 +128,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -150,7 +152,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -174,7 +176,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -198,7 +200,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
@@ -222,7 +224,7 @@
             <input class="input_card_tarefa" type="text" id="text_tarefa" name="tarefa" placeholder="Tarefa" />
 
             <textarea class="input_card_descricao" id="text_descricao"
-                placeholder=" Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
+                placeholder="Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata."
                 name="descricao" cols="20" rows="10"></textarea>
 
                 <div>
