--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 <div class="container_card">
 
-    <div class="card">
+    <div class="card_1">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
 
-         <div class="alinhamento_mob">
+          <div class="alinhamento_mob">
 
             <div class="tag_card_prazo_curto">Prazo Curto!</div>
 
@@ -52,7 +52,7 @@
                     class="icone"><i class="far fa-clock"></i></div></label>
 
             <label class="label_card_descricao" id="text_descricao">
-                Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.
+             Descrição da tarefa, o que deve ser feito e muitas informações que explicam melhor do que se trata.
             </label>
 
             <div class="prazo">
@@ -72,11 +72,12 @@
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
+         
 
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_1">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
 
@@ -113,7 +114,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_1">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         <div class="alinhamento_mob">
@@ -145,7 +146,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_1">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         <div class="alinhamento_mob">
@@ -178,7 +179,7 @@
     </div>
 
 
-    <div class="card">
+    <div class="card_2">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         <div class="alinhamento_mob">
@@ -206,7 +207,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_2">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         <div class="alinhamento_mob">
@@ -239,7 +240,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_2">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         <div class="alinhamento_mob">
@@ -271,7 +272,7 @@
         </div>
     </div>
 
-    <div class="card">
+    <div class="card_2">
 
         <img class="img_card" src="assets/image/tarefa_imagem.JPG" alt="tarefa_imagem" />
         
@@ -299,7 +300,9 @@
         </div>
     </div>
 
+<div>
     <button class="card_button">Ver mais +</button>
+</div>
 </div>
 
 
