--- a/index.html
+++ b/index.html
@@ -67,13 +67,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-         
-
         </div>
     </div>
 
@@ -104,13 +103,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
-
         </div>
     </div>
 
@@ -137,12 +135,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
 
@@ -169,15 +167,14 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
-
 
     <div class="card_2">
 
@@ -198,12 +195,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
 
@@ -231,12 +228,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
 
@@ -263,12 +260,12 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
 
@@ -291,18 +288,18 @@
             <button class="card_button_concluir">
                 <div><i class="fas fa-check"></i></div>Concluir
             </button>
+
             <button class="card_button_prazo"><i class="fas fa-clock"></i>Alterar Prazo</button>
 
             <div class="inclusao">
                 <label for="date" class="card_inclusao_mob">Data da inclusão: há 2 semanas</label>
             </div>
-
         </div>
     </div>
 
-<div>
-    <button class="card_button">Ver mais +</button>
-</div>
+    <div>
+         <button class="card_button">Ver mais +</button>
+    </div>
 </div>
 
 
@@ -354,7 +351,7 @@
             primeira empresa brasileira de software com capital aberto na NYSE, em
             2019. A empresa possui mais de 3,5 mil colaboradores distribuídos
             entre sua sede em São Paulo, 15 filiais pelo Brasil e 5 países da
-            América. Para saber mais, acesse linx.com.br/imprensa.
+            América. Para saber mais, acesse <a href="https://linx.com.br/impresa">Linx</a>.
         </p>
     </div>
 </section>
